[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
rust-version = "1.65"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/core"
repository = "https://github.com/alloy-rs/core"
exclude = ["benches/", "tests/"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# workspace crates
alloy-dyn-abi = { version = "0.3.2", path = "crates/dyn-abi", default-features = false }
alloy-json-abi = { version = "0.3.2", path = "crates/json-abi", default-features = false }
alloy-primitives = { version = "0.3.2", path = "crates/primitives", default-features = false }
alloy-sol-macro = { version = "0.3.2", path = "crates/sol-macro", default-features = false }
alloy-sol-type-parser = { version = "0.3.2", path = "crates/sol-type-parser", default-features = false }
alloy-sol-types = { version = "0.3.2", path = "crates/sol-types", default-features = false }
syn-solidity = { version = "0.3.2", path = "crates/syn-solidity", default-features = false }

# serde
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

cfg-if = "1.0.0"
derive_more = "0.99"
hex-literal = "0.4"
paste = "1.0"
strum = { version = "0.25", features = ["derive"] }
num_enum = "0.7"
thiserror = "1.0"

# misc
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
arbitrary = "1.3"
arrayvec = { version = "0.7", default-features = false }
bincode = "1.3"
bytes = { version = "1", default-features = false }
criterion = "0.5"
derive_arbitrary = "1.3"
getrandom = "0.2"
hex = { package = "const-hex", version = "1.5", default-features = false, features = ["alloc"] }
itoa = "1"
once_cell = "1"
proptest = "1"
proptest-derive = "0.4"
rand = { version = "0.8", default-features = false }
ruint = { version = "1.10.1", default-features = false, features = ["alloc"] }
ruint-macro = { version = "1", default-features = false }
tiny-keccak = "2.0"
