[workspace]
members = ["crates/*", "tests/*"]
resolver = "2"

[workspace.package]
version = "1.5.7"
edition = "2024"
rust-version = "1.85"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/core"
repository = "https://github.com/alloy-rs/core"
exclude = ["tests"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
missing-const-for-fn = "warn"

[workspace.lints.rust]
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
# workspace crates
alloy-core = { version = "1.5.7", path = "crates/core", default-features = false }
alloy-dyn-abi = { version = "1.5.7", path = "crates/dyn-abi", default-features = false }
alloy-json-abi = { version = "1.5.7", path = "crates/json-abi", default-features = false }
alloy-primitives = { version = "1.5.7", path = "crates/primitives", default-features = false }
alloy-sol-macro = { version = "1.5.7", path = "crates/sol-macro", default-features = false }
alloy-sol-macro-input = { version = "1.5.7", path = "crates/sol-macro-input", default-features = false }
alloy-sol-macro-expander = { version = "1.5.7", path = "crates/sol-macro-expander", default-features = false }
alloy-sol-type-parser = { version = "1.5.7", path = "crates/sol-type-parser", default-features = false }
alloy-sol-types = { version = "1.5.7", path = "crates/sol-types", default-features = false }
syn-solidity = { version = "1.5.7", path = "crates/syn-solidity", default-features = false }

# borsh
borsh = { version = "1.5", default-features = false }

# serde
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# schemars
schemars = { version = "1", default-features = false }

# rkyv
rkyv = "0.8"

# macros
proc-macro-error2 = ">=2.0.0, <=2.0.1" # We directly use the `entry_point` private API.
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

cfg-if = "1.0.0"
derive_more = { version = "2.0", default-features = false }
paste = "1.0"

# crypto
k256 = { version = "0.13", default-features = false }
keccak-asm = { version = "0.1.5", default-features = false }
tiny-keccak = { version = "2.0", default-features = false }
sha3 = { version = "0.10.8", default-features = false, features = ["asm"] }

# maps
hashbrown = { version = "0.16", default-features = false }
indexmap = { version = "2.5", default-features = false }
foldhash = { version = "0.2", default-features = false }
rapidhash = { version = "4", default-features = false }
rustc-hash = { version = "2.1", default-features = false }

# misc
allocative = { version = "0.3.2", default-features = false }
alloy-rlp = { version = "0.3", default-features = false, features = ["core-net", "core-error"] }
arbitrary = "1.3"
bcs = "0.1.6"
bincode = "1.3"
bytes = { version = "1", default-features = false }
criterion = "0.7"
diesel = "2.2"
getrandom = "0.4"
hex = { package = "const-hex", version = "1.14", default-features = false, features = [
    "alloc",
    "core-error",
] }
itoa = "1"
postgres-types = "0.2.6"
pretty_assertions = "1.4"
proptest = "1"
proptest-derive = "0.7"
rand = { version = "0.9", default-features = false, features = ["os_rng"] }
rayon = { version = "1.2", default-features = false }
ruint = { version = "1.16.0", default-features = false, features = ["alloc"] }
winnow = { version = "0.7", default-features = false, features = ["alloc"] }
fixed-cache = { version = "0.1.8", default-features = false }

# sqlx support (optional, for DB integration)
sqlx-core = { version = "0.8"}

[patch.crates-io]
# Fix Miri CI: https://github.com/rkyv/rkyv/commit/aea82f04757ed6a3674642f9e7f22b168ec7f955
rkyv = { git = "https://github.com/rkyv/rkyv", rev = "aea82f04757ed6a3674642f9e7f22b168ec7f955" }
