[package]
name = "ethers-abi-enc"
version = "0.1.0"
edition = "2021"
description = "Ethereum ABI encoding and decoding, with static typing"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ethers-rs/core"
readme = "README.md"
keywords = ["ethereum", "abi", "encoding", "EVM", "solidity"]
categories = ["encoding", "serialization", "cryptocurrency", "ethereum"]
authors = []

[dependencies]
ethers-primitives = { version = "0.1.0", path = "../primitives" }
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sol-type-parser = { version = "0.1.0", path = "sol-type-parser" }

thiserror = { version = "1.0.39", optional = true }
serde = { version = "1.0.159", optional = true }

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std", "eip712"]
std = ["hex/std", "thiserror"]
eip712 = []
eip712-serde = ["dep:serde", "eip712"]
