[package]
name = "ethers-abi-enc"
version = "0.1.0"
description = "Ethereum ABI encoding and decoding, with static typing"
readme = "README.md"
keywords = ["ethereum", "abi", "encoding", "EVM", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ethers-primitives = { version = "0.1.0", path = "../primitives" }
hex = { version = "0.4.3", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sol-type-parser = { version = "0.1.0", path = "sol-type-parser" }

thiserror = { version = "1.0.39", optional = true }
serde = { version = "1.0.159", optional = true }

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std"]
std = ["hex/std", "thiserror"]
eip712-serde = ["dep:serde"]
