[package]
name = "ethers-abi-enc"
version = "0.1.0"
description = "Ethereum ABI encoding and decoding, with static typing"
readme = "README.md"
keywords = ["ethereum", "abi", "encoding", "EVM", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ethers-primitives.workspace = true
sol-type-parser.workspace = true

hex = { workspace = true, features = ["alloc"] }

thiserror = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
hex-literal.workspace = true

[features]
default = ["std", "hex/alloc"]
std = ["ethers-primitives/std", "hex/std", "serde?/std", "thiserror"]
# TODO: Can we remove std from here?
eip712-serde = ["std", "dep:serde"]
