[package]
name = "ethers-dyn-abi"
version = "0.1.0"
description = "Ethereum ABI encoding and decoding, with runtime typing"
readme = "README.md"
keywords = ["ethereum", "abi", "encoding", "EVM", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ethers-abi-enc = { version = "0.1.0", path = "../abi", features = ["eip712-serde"] }
ethers-primitives = { version = "0.1.0", path = "../primitives" }
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.160", default-features = false }
serde_json = { version = "1.0.96", default-features = false }

[features]
default = ["std"]
std = ["ethers-abi-enc/std", "ethers-primitives/std"]
