[package]
name = "ethers-dyn-abi"
version = "0.1.0"
description = "Ethereum ABI encoding and decoding, with runtime typing"
readme = "README.md"
keywords = ["ethereum", "abi", "encoding", "EVM", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ethers-abi-enc = { workspace = true, features = ["eip712-serde"] }
ethers-primitives.workspace = true

hex.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["std"]
std = ["ethers-abi-enc/std", "ethers-primitives/std", "hex/std", "serde/std", "serde_json/std"]
