[package]
name = "ethers-primitives"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ethers-rs/core"
readme = "README.md"
description = "fundamental ethereum types shared by revm, reth and ethers"

[dependencies]
# eth
ruint = { version = "1.7", features = ["rlp", "serde"] }
primitive-types = { version = "0.12", default-features = false, optional = true }

# bits B256 B160 crate
fixed-hash = { version = "0.8", default-features = false, features = [
    "rustc-hex",
] }

# utility
derive_more = "0.99"

# optional
serde = { version = "1.0", features = ["derive"], optional = true }

# rlp support
ethers-rlp = { version = "0.1.0", path = "../rlp", optional = true }

bytes = { version = "1", default-features = false, optional = true }

# prop tests
arbitrary = { version = "1.2", features = ["derive"], optional = true }
proptest = { version = "1.1", optional = true }
proptest-derive = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
arbitrary = { version = "1.2", features = ["derive"] }
proptest = { version = "1.1" }
proptest-derive = "0.3"
ruint = { version = "1.7.0", features = [
    "primitive-types",
    "proptest",
    "arbitrary",
] }

[features]
default = ["std"]
std = []
rlp = ["dep:ethers-rlp", "dep:bytes"]
primitive-types = ["dep:primitive-types", "ruint/primitive-types"]
arbitrary = [
    "ruint/arbitrary",
    "ruint/proptest",
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-derive",
]