[package]
name = "ethers-primitives"
version = "0.1.0"
description = "Fundamental ethereum types shared by revm, reth and ethers"
readme = "README.md"
keywords = ["ethereum", "ethers", "revm", "reth"]
categories = ["cryptography::cryptocurrencies"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# eth
ruint = { workspace = true, features = ["rlp", "serde"] }

# bits B256 B160 crate
fixed-hash = { version = "0.8", default-features = false, features = ["rustc-hex"] }

# utility
derive_more = "0.99"

# optional
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true, optional = true }

# rlp support
ethers-rlp = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

# prop tests
arbitrary = { workspace = true, features = ["derive"], optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[features]
default = ["std", "rlp", "serde"]
std = ["serde/std", "ethers-rlp?/std", "bytes?/std", "proptest?/std", "dep:thiserror"]
rlp = ["dep:ethers-rlp", "dep:bytes"]
serde = ["dep:serde", "ruint/serde"]
arbitrary = [
    "ruint/arbitrary",
    "ruint/proptest",
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-derive",
]
