[package]
name = "ethers-rlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
auto_impl = "1.0.1"
bytes = "1.4.0"

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std"]
alloc = []
std = ["alloc"]
