[package]
name = "ethers-rlp"
version = "0.1.0"
edition = "2021"
description = "A fast Rust implementation of the Ethereum RLP encoding"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ethers-rs/core"
readme = "README.md"
keywords = ["ethereum", "rlp", "serialization"]
categories = ["encoding", "serialization", "cryptocurrency", "ethereum"]
authors = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
auto_impl = "1.0.1"
bytes = "1.4.0"
ethers-rlp-derive = { version = "0.1", path = "./rlp-derive", optional = true }

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std", "derive"]
derive = ["dep:ethers-rlp-derive"]
alloc = []
std = ["alloc"]
