[package]
name = "ethers-rlp"
version = "0.1.0"
description = "A fast Rust implementation of the Ethereum RLP encoding"
readme = "README.md"
keywords = ["ethereum", "rlp", "serialization"]
categories = ["encoding", "cryptography::cryptocurrencies"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arrayvec = "0.7.2"
auto_impl = "1.0.1"
bytes = "1.4.0"
ethers-rlp-derive = { version = "0.1", path = "./rlp-derive", optional = true }

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std", "derive"]
derive = ["dep:ethers-rlp-derive"]
alloc = []
std = ["alloc"]
