[package]
name = "alloy-abi-json"
description = "Ethereum ABI JSON file"
keywords = ["ethereum", "abi", "serialization"]
categories = ["encoding", "cryptography::cryptocurrencies"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
alloy-primitives.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = ["serde/std", "alloy-primitives/std"]
