[package]
name = "alloy-dyn-abi"
description = "Run-time ABI and EIP-712 implementations"
keywords = ["ethereum", "abi", "encoding", "EVM", "solidity"]
categories = ["no-std", "encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/dyn-abi"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-sol-types = { workspace = true, features = ["eip712-serde"] }
alloy-primitives.workspace = true

hex.workspace = true
itoa.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["alloc"] }

[dev-dependencies]
hex-literal.workspace = true
criterion.workspace = true
ethabi = "18"

[features]
default = ["std"]
std = ["alloy-sol-types/std", "alloy-primitives/std", "hex/std", "serde/std", "serde_json/std"]

[[bench]]
name = "abi"
path = "benches/abi.rs"
harness = false
