[package]
name = "alloy-json-abi"
description = "Ethereum ABI JSON file (de)serialization"
keywords = ["ethereum", "abi", "serialization"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/json-abi"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
alloy-primitives.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = ["serde/std", "alloy-primitives/std"]
