[package]
name = "alloy-json-abi"
description = "Ethereum ABI JSON file (de)serialization"
keywords = ["ethereum", "abi", "serialization"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/json-abi"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json.workspace = true
criterion.workspace = true
ethabi = "18"

[features]
default = ["std"]
std = ["serde/std", "alloy-primitives/std"]

[[bench]]
name = "json_abi"
path = "benches/json_abi.rs"
harness = false
