[package]
name = "alloy-json-abi"
description = "Full Ethereum JSON-ABI implementation"
keywords = ["ethereum", "abi", "serialization"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/json-abi"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-type-parser.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
criterion.workspace = true
ethabi = "18"

[features]
default = ["std"]
std = [
    "serde/std",
    "alloy-primitives/std",
    "alloy-sol-type-parser/std",
    "serde_json?/std",
]
serde_json = ["dep:serde_json"]

[[bench]]
name = "json_abi"
path = "benches/json_abi.rs"
harness = false
